# wicd-kde

./: CMakeLists.txt  ChangeLog  INSTALL  Messages.sh  TODO  dbushandler.cpp  dbushandler.h  global.cpp  global.h  infosdialog.cpp  infosdialog.h  infosdialog.ui  labelentry.cpp  labelentry.h  main.cpp  mainwindow.cpp  mainwindow.h  networkitemdelegate.cpp  networkitemdelegate.h  networkmodel.cpp  networkmodel.h  networkpanel.cpp  networkpanel.h  networkpropertiesdialog.cpp  networkpropertiesdialog.h  preferencespanel.cpp  preferencespanel.h  profilemanager.cpp  profilemanager.h  profilemanager.ui  scriptsdialog.cpp  scriptsdialog.h  scriptshelper.cpp  scriptshelper.h  settings.kcfgc  trayicon.cpp  trayicon.h  types.h  wicd-client-kde.desktop  wicd-client-kde.notifyrc  (+5 more)
applet/: CMakeLists.txt  adhocdialog.cpp  adhocdialog.h  config-python.h.cmake  global.cpp  infodialog.cpp  infodialog.h  infosdialog.cpp  infosdialog.h  labelentry.h  networkicon.cpp  networkicon.h  networkitem.cpp  networkitem.h  networkplotter.cpp  networkplotter.h  networkview.cpp  networkview.h  plasma-applet-wicd.desktop  profilewidget.cpp  profilewidget.h  wicd-kde.notifyrc  wicdapplet.cpp  wicdapplet.h  wicdappletConfig.ui  wirednetworkitem.cpp  wirednetworkitem.h  wirelessnetworkitem.cpp  wirelessnetworkitem.h
applet/properties/: networkpropertiesdialog.cpp  networkpropertiesdialog.h  scriptsdialog.cpp  scriptsdialog.h  scriptshelper.cpp  tools.cpp  tools.h  wicdclient.scripts.actions
dataengine/: CMakeLists.txt  plasma-dataengine-wicd.desktop  wicd.operations  wicdengine.cpp  wicdengine.h  wicdjob.cpp  wicdjob.h  wicdservice.cpp  wicdservice.h
icons/: CMakeLists.txt
kcm/: CMakeLists.txt  kcm_wicd.desktop  kcmwicd.actions  kcmwicd.desktop  kcmwidget.ui  wicddbusinterface.cpp  wicddbusinterface.h  wicdkcm.cpp  wicdkcm.h
translations/: CMakeLists.txt  cs.po  es.po  extract-and-merge-messages.sh  fr.po  hu.po  it.po  pt_BR.po  wicd-client-kde.pot  zh_CN.po
